--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,11 @@
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.0",
+      "phpunit/phpunit": "^5.5",
         "symfony/css-selector": "3.1.*",
-        "symfony/dom-crawler": "3.1.*"
+      "symfony/dom-crawler": "3.1.*",
+      "phpro/grumphp": "^0.9.1",
+      "squizlabs/php_codesniffer": "^2.6"
     },
     "autoload": {
         "classmap": [
