--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "lodash": "^4.14.0",
     "vue": "^1.0.26",
     "vue-resource": "^0.9.3"
+  },
+  "dependencies": {
+    "laravel-echo": "0.0.21",
+    "pusher-js": "^3.2.1"
   }
 }
