--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "jenssegers/rollbar": "^1.5",
         "barryvdh/laravel-ide-helper": "^2.2",
         "pusher/pusher-php-server": "~2.0",
-        "laravel/scout": "^0.1.1"
+        "laravel/scout": "^0.1.1",
+        "algolia/algoliasearch-client-php": "^1.10"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
