--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,3 +1,5 @@
 FROM php:7.0-fpm
 
-RUN docker-php-ext-install pdo_mysql
+RUN apt-get update && apt-get install -y \
+libpq-dev && docker-php-ext-install \
+pdo pdo_pgsql pdo_mysql
