--- a/composer.json
+++ b/composer.json
@@ -6,18 +6,19 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.3.*",
+        "laravel/framework": "5.4.*",
         "jenssegers/rollbar": "^1.5",
         "barryvdh/laravel-ide-helper": "^2.2",
         "pusher/pusher-php-server": "~2.0",
-        "laravel/scout": "^0.1.1",
+        "laravel/scout": "^2.0.0",
         "algolia/algoliasearch-client-php": "^1.10",
-        "laravel/passport": "^1.0"
+        "laravel/passport": "^2.0",
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-      "phpunit/phpunit": "^5.5",
+      "phpunit/phpunit": "~5.7",
         "symfony/css-selector": "3.1.*",
       "symfony/dom-crawler": "3.1.*",
       "phpro/grumphp": "^0.9.1",
